# MaskGCT-ComfyUI

./: README.md  __init__.py  note.txt  pyproject.toml  requirements.txt
models/tts/maskgct/: maskgct_utils.py  maskgct_utils_fp16.py
models/tts/maskgct/g2p/: g2p_generation.py
models/tts/maskgct/g2p/g2p/: __init__.py  mandarin.py
models/tts/maskgct/g2p/utils/: g2p.py
